Fix background of spinner on mobile, slow rotation

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -128,23 +128,34 @@ a {
 }
 
 .spinner {
+    display: block;
     margin: auto;
     background-image: url(../assets/images/hack-logo/hack_logo_glow.png);
     background-size: 25%;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    img {
 
-        -webkit-animation: rotation 8s infinite linear;
+    img {
+        -webkit-animation: rotation 45s infinite linear;
+                animation: rotation 45s infinite linear;
     }
 }
 
 @-webkit-keyframes rotation {
-     from {
+    from {
         -webkit-transform: rotate(0deg);
     }
     to {
         -webkit-transform: rotate(359deg);
+    }
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
     }
 }
 
